# e-commerce_ai_platform

./: .gitignore  execution_log_20250811_135353.json  pyproject.toml
src/: main.py
src/agents/business_intelligence/: agent.py
src/agents/data_collector/: agent.py
src/agents/feature_enginneer/: agent.py
src/agents/model_trainer/: agent.py
src/agents/predictor/: agent.py
src/mcp/: client.py  protocol.py  server.py
