[project]
name = "ecommerce-ai-platform"
version = "0.1.0"
description = "Multi-agent AI platform with MCP"
requires-python = ">=3.11"

dependencies = [
    "altair==5.5.0",
    "annotated-types==0.7.0",
    "anyio==4.10.0",
    "asyncpg==0.30.0",
    "attrs==25.3.0",
    "blinker==1.9.0",
    "cachetools==6.1.0",
    "certifi==2025.8.3",
    "charset-normalizer==3.4.2",
    "click==8.2.1",
    "colorama==0.4.6",
    "fastapi==0.116.1",
    "gitdb==4.0.12",
    "gitpython==3.1.45",
    "h11==0.16.0",
    "idna==3.10",
    "jinja2==3.1.6",
    "joblib==1.5.1",
    "jsonschema==4.25.0",
    "jsonschema-specifications==2025.4.1",
    "markupsafe==3.0.2",
    "narwhals==2.0.1",
    "numpy==2.3.2",
    "packaging==25.0",
    "pandas==2.3.1",
    "pillow==11.3.0",
    "plotly==6.2.0",
    "protobuf==6.31.1",
    "pyarrow==21.0.0",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pydeck==0.9.1",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "redis==6.2.0",
    "referencing==0.36.2",
    "requests==2.32.4",
    "rpds-py==0.26.0",
    "scikit-learn==1.7.1",
    "scipy==1.16.1",
    "six==1.17.0",
    "smmap==5.0.2",
    "sniffio==1.3.1",
    "starlette==0.47.2",
    "streamlit==1.47.1",
    "tenacity==9.1.2",
    "threadpoolctl==3.6.0",
    "toml==0.10.2",
    "tornado==6.5.1",
    "typing-extensions==4.14.1",
    "typing-inspection==0.4.1",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "uvicorn==0.35.0",
    "watchdog==6.0.0",
    "websockets==15.0.1",
    "xgboost==3.0.3"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0"
]

[tool.hatch.build.targets.wheel]
include = [
  "src/agents/**",
  "src/config/**",
  "src/data/**",
  "src/mcp/**"
]
